# DenKeeper

./: .dockerignore  .gitignore  README.md
docs/: architecture.md  implementation-plan.md  improvements.md  requirements.md  session.md
ops/docker/: .env.example  README.md  docker-compose.yml  healthcheck.sh  migrate-openclaw-state.sh  recover-openclaw-auth.sh  sync-openclaw-auth-bootstrap.sh
ops/docker/openclaw/: Dockerfile  entrypoint.sh  openclaw.base.json
ops/openclaw/: README.md
ops/systemd/: README.md  denkeeper-compose.service  denkeeper-healthcheck.service  denkeeper-healthcheck.timer  install-user-units.sh
plugins/denkeeper-shared/: README.md
plugins/expense-tracker/: index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/expense-tracker/skills/kyoto-expense/: SKILL.md
plugins/expense-tracker/src/: config.ts  types.ts  worker-client.ts
workers/expense-worker/: .env.example  Dockerfile  pyproject.toml
workers/expense-worker/src/expense_worker/: __init__.py  categories.py  config.py  database.py  main.py  models.py  parser.py  repository.py  service.py
workers/expense-worker/tests/: test_config.py  test_parser.py  test_service_structured.py
